# SerraEngine

./: CMakeLists.txt  README.md
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Actor.cpp  Actor.h  App.cpp  App.h  GameBase.cpp  GameBase.h
src/graphics/: Camera.cpp  Camera.h  Color.h  GraphicsUtils.cpp  RendererBase.cpp  RendererBase.h  Shader.cpp  Shader.h
src/graphics/shapes/: CubeRenderer.cpp  CubeRenderer.h  QuadRenderer.cpp  QuadRenderer.h  ShapeRenderer.cpp  ShapeRenderer.h
src/input/: InputBase.cpp  InputBase.h  OrbitalCameraInput.cpp  OrbitalCameraInput.h
src/utils/: Utils.cpp  Utils.h
